--- a/Assignment-1/code/index.html
+++ b/Assignment-1/code/index.html
@@ -13,6 +13,23 @@
 <body>
     <div id="root"></div>
     <script type="text/babel">
+      const tag1 = <div class="container">
+            <div id="yellow">
+                <section class="row yellow"> </section>
+                <section class="row yellow"> </section>
+            </div>
+            <div id="red">
+                <section class="row red"></section>
+            </div>
+            <div id="blue">
+                <section class="row blue"></section>
+                <section class="row blue"></section>
+                <section class="row blue "></section>
+
+            </div>
+        </div>;
+      </script>
+<!--
 //React Code here
  ReactDOM.render(<div></div>,document.getElementById('root'));
 
